se integro la parte de starlink en servicios

--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
                     <h3>Semáforos Solares</h3>
                     <p>Sistemas de señalización vial alimentados por energía solar.</p>
                 </div>
+                
+                <div class="service-card">
+                    <div class="service-icon">📡</div>
+                    <h3>Internet Starlink</h3>
+                    <p>Distribuidor autorizado de internet satelital de alta velocidad. Conexión en cualquier lugar, sin límites geográficos.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -398,11 +404,11 @@
                         </div>
                     </a>
                     
-                    <a href="mailto:evasolar.rgz@gmail.com" class="contact-method">
+                    <a href="/cdn-cgi/l/email-protection#12776473617d7e73603c60756852757f737b7e3c717d7f" class="contact-method">
                         <div class="contact-method-icon">✉️</div>
                         <div class="contact-method-text">
                             <span>Email</span>
-                            <strong>evasolar.rgz@gmail.com</strong>
+                            <strong><span class="__cf_email__" data-cfemail="b5d0c3d4c6dad9d4c79bc7d2cff5d2d8d4dcd99bd6dad8">[email&#160;protected]</span></strong>
                         </div>
                     </a>
                 </div>
@@ -433,6 +439,7 @@
                         <option value="Comunidades">Energía para Comunidades</option>
                         <option value="Educativo">Instituciones Educativas</option>
                         <option value="Agricola">Soluciones Agrícolas</option>
+                        <option value="Starlink">Internet Starlink</option>
                         <option value="Otro">Otro</option>
                     </select>
                 </div>
@@ -464,11 +471,4 @@
     </footer>
 
     <!-- WhatsApp Floating Button -->
-    <a href="https://wa.me/526677950481?text=Hola,%20me%20interesa%20cotizar%20un%20sistema%20solar" class="whatsapp-btn" target="_blank" title="Contáctanos por WhatsApp">
-        💬
-    </a>
-
-    <!-- JavaScript -->
-    <script src="script.js"></script>
-</body>
-</html>
+    <a href="https://wa.me/526677950481?text=Hola,%20me%20interesa%20cotizar%20un%20sistema%20solar" class="whatsapp-btn" target="_bl
